--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     },
     "dependencies": {
         "@popperjs/core": "^2.11.8",
+        "@yaireo/tagify": "^4.35.3",
         "bootstrap": "^5.3.7",
         "bootstrap-icons": "^1.13.1"
     }
